@@ -10,6 +10,7 @@ MovieJukebox 1.0.17 beta
   - Fixed defect #662 FilmDeltaSEPlugin can't handle "illegal HTML characters"
   - Fixed defect #666 Can't connect to imdb behind authenticated proxy
   - Fixed defect #667 Can't download image behind authenticated proxy
+  - Enhancement  #671 Option to create posters for set masters
   - Fixed defect #673 Sets no longer appear on categories.html page
   - Fixed defect #676 MovieMeterPlugin: problem when no movie duration is available
   - Fixed defect #677 Exception in MovieMeterPlugin
